--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,2 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+
+// Bootstrap
 @import "~bootstrap/scss/bootstrap"
+
+// Fontawesome
+@import "~@fortawesome/fontawesome-free/scss/fontawesome"
+@import "~@fortawesome/fontawesome-free/scss/brands"
+@import "~@fortawesome/fontawesome-free/scss/regular"
+@import "~@fortawesome/fontawesome-free/scss/brands"
+@import "~@fortawesome/fontawesome-free/scss/solid"
